# kith

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
app/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest-setup.ts
app/src/: App.svelte  main.ts
app/src/components/: AboutModal.svelte  AboutModal.test.ts  CitationsEditor.svelte  CitationsEditor.test.ts  ConfirmDialog.svelte  DatabaseBar.svelte  DateInput.svelte  DateInput.test.ts  DetailPopover.svelte  DetailPopover.test.ts  EmptyState.svelte  EmptyState.test.ts  EventEditor.svelte  EventEditor.test.ts  ExportDialog.svelte  ExportDialog.test.ts  FamilyForm.svelte  FamilyRow.svelte  FileMenu.svelte  FileMenu.test.ts  ImportSummaryDialog.svelte  ImportSummaryDialog.test.ts  JumpToPerson.svelte  JumpToPerson.test.ts  Library.svelte  MediaGallery.svelte  MediaGallery.test.ts  NamesEditor.svelte  NamesEditor.test.ts  PersonForm.svelte  PersonForm.test.ts  PersonPicker.svelte  PersonRow.svelte  RecordPreview.svelte  ShortcutsHelp.svelte  ShortcutsHelp.test.ts  SourceForm.svelte  SourcesView.svelte  SourcesView.test.ts  ThemeToggle.svelte  (+7 more)
app/src/lib/: api.test.ts  api.ts  dbActions.ts  drafts.test.ts  drafts.ts  errors.ts  exportActions.ts  format.test.ts  format.ts  mediaActions.ts  shortcuts.svelte.test.ts  shortcuts.svelte.ts  types.ts  version.test.ts  version.ts  viewport.test.ts  viewport.ts
app/src/lib/actions/: zoom.ts
app/src/lib/stores/: about.svelte.ts  chart.svelte.ts  chart.test.ts  db.svelte.ts  importSummary.svelte.ts  library.svelte.ts  media.svelte.test.ts  media.svelte.ts  modal.svelte.ts  nodeDetail.svelte.test.ts  nodeDetail.svelte.ts  search.svelte.test.ts  search.svelte.ts  selection.svelte.ts  sources.svelte.ts  toast.svelte.test.ts  toast.svelte.ts  ui.svelte.ts  undo.svelte.test.ts  undo.svelte.ts
app/src/styles/: global.css  tokens.css
crates/kith-cli/: Cargo.toml
crates/kith-cli/src/: cli.rs  context.rs  exit.rs  lib.rs  main.rs  output.rs
crates/kith-cli/src/commands/: db.rs  dev.rs  event.rs  export.rs  family.rs  import.rs  init.rs  media.rs  mod.rs  name.rs  person.rs  query.rs  search.rs  source.rs
crates/kith-cli/tests/: cli.rs
crates/kith-core/: Cargo.toml
crates/kith-core/benches/: gedcom.rs  layout.rs  search.rs  views.rs
crates/kith-core/src/: date.rs  error.rs  lib.rs  prelude.rs  synth.rs
crates/kith-core/src/db/: event.rs  family.rs  individual.rs  maintenance.rs  media.rs  mod.rs  name.rs  search.rs  source.rs  undo.rs
crates/kith-core/src/gedcom/: lexer.rs  map.rs  mod.rs  tags.rs  tree.rs  writer.rs
crates/kith-core/src/layout/: ancestors.rs  build.rs  descendants.rs  hourglass.rs  metrics.rs  mod.rs  network.rs  tidy.rs
crates/kith-core/src/lb/: map.rs  mod.rs  record.rs
crates/kith-core/src/model/: draft.rs  enums.rs  ids.rs  mod.rs  record.rs
crates/kith-core/src/query/: mod.rs  views.rs  walk.rs
crates/kith-core/src/render/: escape.rs  html.rs  mod.rs  redact.rs  svg.rs  theme.rs
crates/kith-core/src/util/: base64.rs  mod.rs
crates/kith-core/tests/: crud.rs  gedcom.rs  gedcom_round_trip.rs  layout_api.rs  layout_graph.rs  lb.rs  media.rs  render_html.rs  search.rs  source.rs  stress.rs  undo.rs  walk_graph.rs
crates/kith-core/tests/common/: mod.rs
crates/kith-core/tests/fixtures/: adopted_child.ged  alt_names.ged  fuzzy_dates.ged  lb_sample.json  media.ged  multiline_note.ged  nuclear.ged  remarriage.ged  sources.ged  unsupported_tags.ged
crates/kith-core/tests/snapshots/: gedcom_round_trip__nuclear_export.snap  gedcom_round_trip__sources_export.snap  layout_graph__ancestors_cousin_marriage_g3.snap  layout_graph__ancestors_missing_grandparents_g2.snap  layout_graph__ancestors_small_balanced_g2.snap  layout_graph__descendants_isolated_g2.snap  layout_graph__descendants_multiple_marriage_g1.snap  layout_graph__descendants_small_balanced_g2.snap  layout_graph__hourglass_small_balanced_g1.snap  layout_graph__network_two_lineages_joined.snap  layout_graph__network_wide_pedigree.snap  render_html__ancestors_missing_grandparents_light.snap  render_html__descendants_multiple_marriage_light.snap  render_html__descendants_small_balanced_dark.snap  render_html__descendants_small_balanced_light.snap  render_html__descendants_small_balanced_light_redacted.snap  render_html__hourglass_small_balanced_light.snap  render_html__network_two_lineages_joined_light.snap  render_html__portrait_descendants_deceased.snap  walk_graph__ancestors_cousin_marriage_g3.snap  walk_graph__ancestors_missing_grandparents_g2.snap  walk_graph__ancestors_small_balanced_g2.snap  walk_graph__descendants_multiple_marriage_g1.snap  walk_graph__descendants_small_balanced_g2.snap  walk_graph__hourglass_small_balanced_up1_down1.snap
crates/kith-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/kith-tauri/capabilities/: default.json
crates/kith-tauri/icons/: icon.icns
crates/kith-tauri/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/kith-tauri/src/commands/: about.rs  date.rs  db.rs  dto.rs  event.rs  export.rs  family.rs  gedcom.rs  layout.rs  lb.rs  media.rs  mod.rs  name.rs  person.rs  source.rs  undo.rs
crates/kith-tauri/tests/: commands.rs
migrations/: 0001_initial.sql  0002_search_fts.sql
scripts/: ci-local.ps1  ci-local.sh
