[package]
name = "kith-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true     # populates CARGO_PKG_AUTHORS for the about_info command
publish = false              # desktop app, never released to crates.io (enables
                             # the kith-core path dep under allow-wildcard-paths,
                             # mirroring kith-cli)

# Desktop layout: a `_lib` library with an explicit crate-type (avoids the
# Windows same-name lib/bin clash; mobile-ready) plus a thin bin, so the command
# fns are unit-testable via the lib.
[lib]
name = "kith_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "kith-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
# `thiserror` is intentionally omitted: `CommandError` is a plain serializable
# IPC DTO with a hand-written `From<CoreError>`, not a rich `std::error::Error`.
kith-core = { path = "../kith-core" }      # the engine (path dep; never the reverse)
serde = { workspace = true }               # CommandError / DbInfo / DatePreview / request DTOs
serde_json = { workspace = true }          # the app-config file

[dev-dependencies]
# Drives the headless command suite: `#[tokio::test]` over the `_impl` logic fns
# with no webview. `tokio` is already a transitive Tauri dep; declared explicitly
# here for the test macros + a current-thread runtime.
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = { workspace = true }            # isolated dirs for the restart-persistence test

[lints]
workspace = true
